[tool.poetry]
name = "speedtest-logger"
version = "0.1.0"
description = "Automatically test and log your internet speed."
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
speedtest-cli = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
